--- a/index.html
+++ b/index.html
@@ -4,59 +4,42 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Riepilogo</title>
-
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Mio CSS -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="manifest" href="manifest.webmanifest">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
-
 <body>
-    <!-- Sezione Navbar -->
-  <nav class="navbar py-2 bg-dark border-bottom border-body" data-bs-theme="dark">
-    <div class="container d-flex flex-wrap">
-        <a class="navbar-brand" href="index.html">
-            <img src="IMG/icon.png" alt="Registro spese personali" width="40" height="40">
-        </a>
-        <ul class="nav">
-            <li class="nav-item">   
-                <a type="button" class="btn btn-dark" href="storico.html">                     
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#ffffff" class="bi bi-database" viewBox="0 0 16 16">
-                        <path d="M4.318 2.687C5.234 2.271 6.536 2 8 2s2.766.27 3.682.687C12.644 3.125 13 3.627 13 4c0 .374-.356.875-1.318 1.313C10.766 5.729 9.464 6 8 6s-2.766-.27-3.682-.687C3.356 4.875 3 4.373 3 4c0-.374.356-.875 1.318-1.313M13 5.698V7c0 .374-.356.875-1.318 1.313C10.766 8.729 9.464 9 8 9s-2.766-.27-3.682-.687C3.356 7.875 3 7.373 3 7V5.698c.271.202.58.378.904.525C4.978 6.711 6.427 7 8 7s3.022-.289 4.096-.777A5 5 0 0 0 13 5.698M14 4c0-1.007-.875-1.755-1.904-2.223C11.022 1.289 9.573 1 8 1s-3.022.289-4.096.777C2.875 2.245 2 2.993 2 4v9c0 1.007.875 1.755 1.904 2.223C4.978 15.71 6.427 16 8 16s3.022-.289 4.096-.777C13.125 14.755 14 14.007 14 13zm-1 4.698V10c0 .374-.356.875-1.318 1.313C10.766 11.729 9.464 12 8 12s-2.766-.27-3.682-.687C3.356 10.875 3 10.373 3 10V8.698c.271.202.58.378.904.525C4.978 9.71 6.427 10 8 10s3.022-.289 4.096-.777A5 5 0 0 0 13 8.698m0 3V13c0 .374-.356.875-1.318 1.313C10.766 14.729 9.464 15 8 15s-2.766-.27-3.682-.687C3.356 13.875 3 13.373 3 13v-1.302c.271.202.58.378.904.525C4.978 12.71 6.427 13 8 13s3.022-.289 4.096-.777c.324-.147.633-.323.904-.525"/>
-                    </svg>
-                </a>
-        </button>
-            </li>
-            <li class="nav-item">
-                <a type="button" class="btn btn-dark" href="inserisci.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#ffffff" class="bi bi-plus-square" viewBox="0 0 16 16">
-                        <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"></path>
-                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"></path>
-                    </svg>
-                </a>
-            </li>
-        </ul>
-    </div>
-  </nav>
+  <div id="navbar"></div>
 
-  <script type="module">
-    import { requireAuth, currentUser, logout } from "./js/auth.js";
-    requireAuth();
+  <main class="container mt-4">
+    <h1 class="h3 mb-3">Dashboard</h1>
+    <canvas id="chartTotali" height="200"></canvas>
 
-    // navbar attiva + logout
-    const file = (location.pathname.split("/").pop() || "index.html").toLowerCase();
-    document.querySelectorAll('nav a[data-page]').forEach(a=>{
-      if (a.getAttribute('data-page') === file) a.classList.add('fw-bold','text-decoration-underline');
-    });
-    document.getElementById("logoutLink")?.addEventListener("click",(e)=>{ e.preventDefault(); logout(); });
+    <section class="mt-4">
+      <h2 class="h5">Ultime spese</h2>
+      <ul id="ultimeSpese" class="list-group"></ul>
+    </section>
 
-    // mostra email
-    const t = setInterval(()=>{
-      const u = currentUser();
-      if (u) { document.getElementById("who").textContent = `Connesso come ${u.email}`; clearInterval(t); }
-    },200);
-  </script>
+    <section class="mt-4">
+      <h2 class="h5">Budget mensile</h2>
+      <div id="budgetStatus" class="mb-2"></div>
+      <form id="budgetForm" class="row g-2">
+        <div class="col-sm-5">
+          <input id="budgetCategoria" class="form-control" placeholder="Categoria">
+        </div>
+        <div class="col-sm-5">
+          <input id="budgetImporto" type="number" step="0.01" min="0" class="form-control" placeholder="Importo (€)">
+        </div>
+        <div class="col-sm-2">
+          <button class="btn btn-primary w-100" type="submit">Imposta</button>
+        </div>
+      </form>
+    </section>
+  </main>
 
+  <script type="module" src="js/navbar.js"></script>
+  <script type="module" src="js/dashboard.js"></script>
+  <script src="js/sw.js"></script>
 </body>
 </html>
