--- a/signup.html
+++ b/signup.html
@@ -3,47 +3,40 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Accedi</title>
-
-  <!-- Bootstrap CSS -->
+  <title>Registrati</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <link rel="manifest" href="manifest.webmanifest">
-  <!-- Mio CSS -->
   <link rel="stylesheet" href="css/style.css">
-
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body class="container min-vh-100 d-flex flex-column justify-content-center align-items-center gap-4">
   <main class="container">
     <div class="container text-center">
-      <img class="mb-4" src="IMG/icon.png" alt="" width="72" height="57">
+      <img class="mb-4" src="IMG/icon.png" width="72" height="57" alt="">
     </div>
     <div class="container">
       <div class="card mx-auto p-2 shadow-sm" style="max-width: 420px">
-        <div class="card-header text-center">
-        Accedi
-        </div>
+        <div class="card-header text-center">Registrati</div>
         <div class="card-body">
-          <form id="loginForm" class="login-form mx-auto" novalidate>
+          <form id="signupForm" class="mx-auto" novalidate>
             <div class="mb-3">
               <label class="form-label" for="email">E-mail</label>
               <input id="email" type="email" class="form-control" required autocomplete="username">
             </div>
             <div class="mb-3">
               <label class="form-label" for="password">Password</label>
-              <input id="password" type="password" class="form-control" required autocomplete="current-password">
+              <input id="password" type="password" class="form-control" required autocomplete="new-password">
             </div>
-            <button class="btn btn-primary w-100" type="submit">Entra</button>
+            <button class="btn btn-primary w-100" type="submit">Crea account</button>
           </form>
-            <div class="mt-3 text-center"><a href="signup.html">Registrati</a></div>
+          <div class="mt-3 text-center">
+            <a href="login.html">Hai già un account? Accedi</a>
+          </div>
         </div>
       </div>
     </div>
     <div id="msg" class="mb-3" role="status" aria-live="polite"></div>
   </main>
-
-  <!-- JS di pagina -->
-  <script type="module" src="js/login.js"></script>
-<script src="js/sw.js"></script>
+  <script type="module" src="js/signup.js"></script>
+  <script src="js/sw.js"></script>
 </body>
 </html>
