--- a/storico.html
+++ b/storico.html
@@ -8,36 +8,13 @@
 <link rel="preconnect" href="https://www.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://identitytoolkit.googleapis.com" crossorigin>
 <link rel="preconnect" href="https://firestore.googleapis.com" crossorigin>
+  <link rel="manifest" href="manifest.webmanifest">
 <link rel="stylesheet" href="css/style.css">
 <meta name="robots" content="noindex">
 </head>
 <body>
+  <div id="navbar"></div>
   <!-- Sezione Navbar -->
-  <nav class="navbar py-2 bg-dark border-bottom border-body" data-bs-theme="dark">
-    <div class="container d-flex flex-wrap">
-        <a class="navbar-brand" href="index.html">
-            <img src="IMG/icon.png" alt="Registro spese personali" width="40" height="40">
-        </a>
-        <ul class="nav">
-            <li class="nav-item">   
-                <a type="button" class="btn btn-dark" href="storico.html">                     
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#ffffff" class="bi bi-database" viewBox="0 0 16 16">
-                        <path d="M4.318 2.687C5.234 2.271 6.536 2 8 2s2.766.27 3.682.687C12.644 3.125 13 3.627 13 4c0 .374-.356.875-1.318 1.313C10.766 5.729 9.464 6 8 6s-2.766-.27-3.682-.687C3.356 4.875 3 4.373 3 4c0-.374.356-.875 1.318-1.313M13 5.698V7c0 .374-.356.875-1.318 1.313C10.766 8.729 9.464 9 8 9s-2.766-.27-3.682-.687C3.356 7.875 3 7.373 3 7V5.698c.271.202.58.378.904.525C4.978 6.711 6.427 7 8 7s3.022-.289 4.096-.777A5 5 0 0 0 13 5.698M14 4c0-1.007-.875-1.755-1.904-2.223C11.022 1.289 9.573 1 8 1s-3.022.289-4.096.777C2.875 2.245 2 2.993 2 4v9c0 1.007.875 1.755 1.904 2.223C4.978 15.71 6.427 16 8 16s3.022-.289 4.096-.777C13.125 14.755 14 14.007 14 13zm-1 4.698V10c0 .374-.356.875-1.318 1.313C10.766 11.729 9.464 12 8 12s-2.766-.27-3.682-.687C3.356 10.875 3 10.373 3 10V8.698c.271.202.58.378.904.525C4.978 9.71 6.427 10 8 10s3.022-.289 4.096-.777A5 5 0 0 0 13 8.698m0 3V13c0 .374-.356.875-1.318 1.313C10.766 14.729 9.464 15 8 15s-2.766-.27-3.682-.687C3.356 13.875 3 13.373 3 13v-1.302c.271.202.58.378.904.525C4.978 12.71 6.427 13 8 13s3.022-.289 4.096-.777c.324-.147.633-.323.904-.525"/>
-                    </svg>
-                </a>
-        </button>
-            </li>
-            <li class="nav-item">
-                <a type="button" class="btn btn-dark" href="inserisci.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#ffffff" class="bi bi-plus-square" viewBox="0 0 16 16">
-                        <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"></path>
-                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"></path>
-                    </svg>
-                </a>
-            </li>
-        </ul>
-    </div>
-  </nav>
   
   <h1 class="text-center mt-4">📚 Storico</h1>
 
@@ -69,26 +46,22 @@
             <th>Categoria</th>
             <th class="text-end">Importo</th>
             <th>Etichette</th>
+            <th>Azioni</th>
           </tr>
         </thead>
         <tbody id="tbody">
-          <tr><td colspan="5" class="text-center text-muted">Caricamento…</td></tr>
+          <tr><td colspan="6" class="text-center text-muted">Caricamento…</td></tr>
         </tbody>
       </table>
     </div>
   </div>
 
+<script type="module" src="js/navbar.js"></script>
   <script type="module">
-    import { requireAuth, logout } from "./js/auth.js";
-    import { getUltimeSpese, filtraPerMese, euro } from "./js/spese.js";
+    import { requireAuth } from "./js/auth.js";
+    import { getUltimeSpese, filtraPerMese, euro, updateSpesa, deleteSpesa } from "./js/spese.js";
     requireAuth();
 
-    // navbar attiva + logout
-    const file = (location.pathname.split("/").pop() || "index.html").toLowerCase();
-    document.querySelectorAll('nav a[data-page]').forEach(a=>{
-      if (a.getAttribute('data-page') === file) a.classList.add('fw-bold','text-decoration-underline');
-    });
-    document.getElementById("logoutLink")?.addEventListener("click",(e)=>{ e.preventDefault(); logout(); });
 
     const tbody  = document.getElementById("tbody");
     const inputM = document.getElementById("mese");
@@ -103,13 +76,14 @@
     await carica();
 
     document.getElementById("btnFiltra").addEventListener("click", render);
+  tbody.addEventListener("click", onAction);
 
     async function carica() {
       try {
         cache = await getUltimeSpese(300);
         render();
       } catch (e) {
-        tbody.innerHTML = `<tr><td colspan="5" class="text-danger text-center">${e.message}</td></tr>`;
+        tbody.innerHTML = `<tr><td colspan="6" class="text-danger text-center">${e.message}</td></tr>`;
       }
     }
 
@@ -122,8 +96,8 @@
         data = data.filter(s =>
           (s.descrizione || "").toLowerCase().includes(q) ||
           (Array.isArray(s.etichette) ? s.etichette.join(",") : "").toLowerCase().includes(q)
-        );
-      }
+          );
+        }
 
       // totale
       const tot = data.reduce((sum, s) => sum + Number(s.importo || 0), 0);
@@ -131,7 +105,7 @@
 
       // tabella
       if (!data.length) {
-        tbody.innerHTML = `<tr><td colspan="5" class="text-center text-muted">Nessuna spesa per il mese selezionato.</td></tr>`;
+        tbody.innerHTML = `<tr><td colspan="6" class="text-center text-muted">Nessuna spesa per il mese selezionato.</td></tr>`;
         return;
       }
 
@@ -142,8 +116,33 @@
           <td>${escapeHtml(s.categoria || "")}</td>
           <td class="text-end">${euro(s.importo)}</td>
           <td>${Array.isArray(s.etichette) ? s.etichette.map(t => `<span class="badge text-bg-light me-1">${escapeHtml(t)}</span>`).join("") : ""}</td>
+          <td class="text-end"><button class="btn btn-sm btn-outline-secondary me-1 edit" data-id="${s.id}">Modifica</button><button class="btn btn-sm btn-outline-danger delete" data-id="${s.id}">Elimina</button></td>
         </tr>
       `).join("");
+    }
+
+    async function onAction(e){
+      const id = e.target.dataset.id;
+      if(!id) return;
+      if(e.target.classList.contains("delete")){
+        if(confirm("Eliminare questa spesa?")){
+          await deleteSpesa(id);
+          cache = cache.filter(s=>s.id!==id);
+          render();
+        }
+      } else if(e.target.classList.contains("edit")){
+        const sp = cache.find(s=>s.id===id);
+        const d = prompt("Descrizione", sp.descrizione);
+        if(d!==null){
+          const imp = prompt("Importo", sp.importo);
+          if(imp!==null){
+            await updateSpesa(id,{descrizione:d, importo:Number(imp)});
+            sp.descrizione=d;
+            sp.importo=Number(imp);
+            render();
+          }
+        }
+      }
     }
 
     function escapeHtml(str) {
@@ -152,5 +151,6 @@
       );
     }
   </script>
+  <script src="js/sw.js"></script>
 </body>
 </html>
